# AI-BE-technical-assignment

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  constants.py  main.py
app/api/v1/: inference.py  rag.py
app/core/: rag_pipeline.py
app/db/: database.py  vector_store.py
app/schemas/: inference.py  rag.py
app/services/embedding/: embedding_batch.py  embedding_service.py
app/services/llm/: llm_client.py  prompt_builder.py  templates.py
app/services/retriever/: retriever_service.py
app/utils/: logger.py  position_utils.py
scripts/: embed_news_data.py  manage_vector_columns.py
tests/integration/: test_rag_flow.py
tests/unit/core/: test_rag_pipeline.py
tests/unit/services/embedding/: test_embedding_service.py
tests/unit/services/llm/: test_llm_client.py  test_prompt_builder.py
tests/unit/services/retriever/: test_retriever_service.py
tests/unit/utils/: test_position_utils.py
